--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         </li>
       </ul>
     </nav>
-    <div ui-view></div>
+    <div ui-view="header"></div>
+    <div ui-view="content"></div>
+    <div ui-view="footer"></div>
     <script type="application/JavaScript" src="src/Libs/jQuery/jquery-1.12.0.min.js"></script>
     <script type="application/JavaScript" src="src/Libs/AngularJS/angular.min.js"></script>
     <script type="application/JavaScript" src="src/Libs/AngularJS/angular-ui-router.min.js"></script>
